# vobject

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py  tests.py
.github/workflows/: test.yml
test_files/: utf8_test.ics
vobject/: __init__.py  base.py  behavior.py  change_tz.py  hcalendar.py  icalendar.py  ics_diff.py  vcard.py  win32tz.py
